# sokol

./: CMakeLists (Kopie).txt  CMakeLists.txt  Readme_Lazarus.md
Lazarus-Package/sokol_03.2026/: copyright.md  fp_sokol.pas  fp_sokol_includes.inc  fp_sokol_package.lpk  fp_sokol_package.pas  readme.md
Lazarus-Package/sokol_03.2026/Examples/10_-_Hello/: link14161.res  project1  project1.lpr  project1.lps
Lazarus-Package/sokol_03.2026/Examples/10_-_Hello/backup/: project1.lpi  project1.lpr  project1.lps
Lazarus-Package/sokol_03.2026/Examples/10_-_Hello/lib/x86_64-linux/: project1.compiled
Lazarus-Package/sokol_03.2026/Examples/10_-_Hello/lib/x86_64-win64/: project1.compiled
Lazarus-Package/sokol_03.2026/backup/: fp_sokol_includes.inc.bak
Lazarus-Package/sokol_03.2026/cmake_files/: CMakeLists.txt
Lazarus-Package/sokol_03.2026/lib/x86_64-linux/: fp_sokol.ppu  fp_sokol_package.compiled  fp_sokol_package.ppu
Lazarus-Package/sokol_03.2026/lib/x86_64-win64/: fp_sokol.ppu  fp_sokol_package.compiled  fp_sokol_package.ppu
Lazarus-Package/sokol_03.2026/sokol/: sokol_app.inc  sokol_args.inc  sokol_audio.inc  sokol_fetch.inc  sokol_glue.inc  sokol_log.inc  sokol_time.inc
Lazarus-Package/sokol_03.2026/sokol/backup/: sokol_gfx.inc.bak
Lazarus-Package/sokol_03.2026/sokol/util/: sokol_color.inc  sokol_debugtext.inc  sokol_fontstash.inc  sokol_gfx_imgui.inc  sokol_gl.inc  sokol_imgui.inc  sokol_memtrack.inc  sokol_nuklear.inc  sokol_shape.inc  sokol_spine.inc
